# boost_log_example

./: CMakeLists.txt  logger.hpp  main.cpp
